--- a/8-Multicore/FreeRTOSSMP/CMakeLists.txt
+++ b/8-Multicore/FreeRTOSSMP/CMakeLists.txt
@@ -1,26 +1,39 @@
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+if(WIN32)
+    set(USERHOME $ENV{USERPROFILE})
+else()
+    set(USERHOME $ENV{HOME})
+endif()
+set(sdkVersion 2.2.0)
+set(toolchainVersion 14_2_Rel1)
+set(picotoolVersion 2.2.0)
+set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+if (EXISTS ${picoVscode})
+    include(${picoVscode})
+endif()
+# ====================================================================================
+set(PICO_BOARD pico CACHE STRING "Board type")
+
 cmake_minimum_required(VERSION 3.12)
 
 # Change your executable name to something creative!
 set(NAME BlinkLEDExt) # <-- Name your project/executable here!
+include("pico_sdk_import.cmake")
 
-include(pico_sdk_import.cmake)
-
-# Gooey boilerplate
 project(${NAME} C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
+add_compile_definitions(PICO_CXX_DISABLE_ALLOCATION_OVERRIDES)
+
 
 # Initialize the SDK
 pico_sdk_init()
 
 #include Libraries
+SET(FREERTOS_KERNEL_PATH "${CMAKE_CURRENT_LIST_DIR}/../../lib/FreeRTOS-Kernel" CACHE STRING "Common Lib")
 SET(FREERTOS_CONFIG_FILE_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/port/FreeRTOS-Kernel" CACHE STRING "Local Config")
-include_directories("${FREERTOS_CONFIG_FILE_DIRECTORY}") 
+include("${FREERTOS_CONFIG_FILE_DIRECTORY}/freertos_config.cmake") 
 include(FreeRTOS_Kernel_import.cmake)
-add_compile_definitions(
-    FREE_RTOS_KERNEL_SMP=1
-    portSUPPORT_SMP=1
-)
 
 #Add main source directory
 add_subdirectory(src)
